# background_remover

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
packaging/: background_remover.spec
scripts/: build_macos.py  build_windows.py  create_dmg.sh
src/background_remover/: __init__.py  __main__.py  app.py  drop_zone.py  image_processor.py  main_window.py  splash_screen.py  worker.py
src/background_remover/ui/: __init__.py  file_list_widget.py  progress_dialog.py
tests/: conftest.py  test_image_processor.py
